# nxp-legacy-lpc-mbed6

./: .gitignore  .mbedls-mock  CMakeLists.txt  README.md  custom_targets.json  main.cpp  main_filesystem.cpp  mbed_app.json  postbuild.py
TARGET_LPC11U6X/: CMakeLists.txt  PeripheralNames.h  PinNames.h  analogin_api.c  device.h  gpio_api.c  gpio_irq_api.c  i2c_api.c  objects.h  pinmap.c  pwmout_api.c  rtc_api.c  serial_api.c  sleep.c  spi_api.c  us_ticker.c
TARGET_LPC11U6X/device/: LPC11U6x.h  cmsis.h  cmsis_nvic.h  system_LPC11U6x.c  system_LPC11U6x.h
TARGET_LPC11U6X/device/TOOLCHAIN_ARM_STD/TARGET_LPC11U68/: LPC11U68.sct  startup_LPC11U6x.S
TARGET_LPC11U6X/device/TOOLCHAIN_GCC_ARM/TARGET_LPC11U68/: LPC11U68.ld  startup_LPC11U68.S  startup_LPC11U68.cpp
TARGET_LPC11UXX/: CMakeLists.txt  PeripheralPins.h  PortNames.h  USBEndpoints_LPC11U.h  USBHAL_LPC11U.cpp  analogin_api.c  gpio_api.c  gpio_irq_api.c  gpio_object.h  i2c_api.c  objects.h  pinmap.c  port_api.c  pwmout_api.c  serial_api.c  sleep.c  spi_api.c  us_ticker.c
TARGET_LPC11UXX/TARGET_AIRIO_BASE/: PeripheralNames.h  PinNames.h  device.h
TARGET_LPC11UXX/TARGET_MCU_LPC11U35/TARGET_AE_LPC11U35_MB/: PinNames.h
TARGET_LPC11UXX/TARGET_MCU_LPC11U35/TARGET_LPC11U35_501/: PinNames.h
TARGET_LPC11UXX/TARGET_MCU_LPC11U35_501/: PeripheralPins.c
TARGET_LPC11UXX/TARGET_MCU_LPC11U35_501/TARGET_AE_LPC11U35_MB/: PinNames.h
TARGET_LPC11UXX/TARGET_MCU_LPC11U35_501/TARGET_AIRIO_BASE/: PinNames.h
TARGET_LPC11UXX/TARGET_MCU_LPC11U35_501/TARGET_LPC11U35_501/: PinNames.h
TARGET_LPC11UXX/device/: LPC11Uxx.h  cmsis.h  cmsis_nvic.c  cmsis_nvic.h  power_api.h  system_LPC11Uxx.c  system_LPC11Uxx.h
TARGET_LPC11UXX/device/TOOLCHAIN_ARM_STD/: startup_LPC11xx.S
TARGET_LPC11UXX/device/TOOLCHAIN_ARM_STD/TARGET_AE_LPC11U35_MB/: LPC11U35.sct
TARGET_LPC11UXX/device/TOOLCHAIN_ARM_STD/TARGET_AIRIO_BASE/: LPC11U35.sct
TARGET_LPC11UXX/device/TOOLCHAIN_GCC_ARM/: startup_LPC11xx.S
TARGET_LPC11UXX/device/TOOLCHAIN_GCC_ARM/TARGET_AIRIO_BASE/: LPC11U35.ld
TARGET_LPC15XX/: CMakeLists.txt  PeripheralNames.h  PinNames.h  PortNames.h  analogin_api.c  analogout_api.c  can_api.c  device.h  gpio_api.c  gpio_irq_api.c  gpio_object.h  i2c_api.c  objects.h  pinmap.c  pwmout_api.c  rtc_api.c  serial_api.c  spi_api.c  us_ticker.c
TARGET_LPC15XX/device/: LPC15xx.h  cmsis.h  cmsis_nvic.h  system_LPC15xx.c  system_LPC15xx.h
TARGET_LPC15XX/device/TOOLCHAIN_ARM_STD/: startup_LPC15xx.S
TARGET_LPC15XX/device/TOOLCHAIN_GCC_ARM/: LPC1549.ld  startup_LPC15xx.S
TARGET_LPC1769/: CMakeLists.txt  PinNames.h  clock_init.c  device.h  reserved_pins.h
TARGET_LPC82X/: CMakeLists.txt  PeripheralNames.h  PortNames.h  analogin_api.c  device.h  gpio_api.c  gpio_irq_api.c  gpio_object.h  i2c_api.c  mbed_rtx.h  objects.h  pinmap.c  pwmout_api.c  serial_api.c  sleep.c  spi_api.c  us_ticker.c
TARGET_LPC82X/TARGET_LPC824/: PinNames.h
TARGET_LPC82X/TARGET_LPC824/device/TOOLCHAIN_ARM_STD/: startup_LPC8xx.S
TARGET_LPC82X/TARGET_LPC824/device/TOOLCHAIN_GCC_ARM/: startup_LPC824.S
TARGET_LPC82X/TARGET_SSCI824/: PinNames.h
TARGET_LPC82X/TARGET_SSCI824/device/TOOLCHAIN_GCC_ARM/: startup_LPC824.S
TARGET_LPC82X/device/: LPC82x.h  cmsis.h  cmsis_nvic.h  system_LPC82x.h  system_LPC8xx.c
TARGET_LPC82X/device/TOOLCHAIN_ARM_STD/: startup_LPC8xx.S
TARGET_LPC82X/device/TOOLCHAIN_GCC_ARM/: startup_LPC824.S
daplink/: README.md
